--- a/style.css
+++ b/style.css
@@ -10,3 +10,110 @@ font-family: 'Sen', sans-serif; */
 body {
     background: var(--dark-green);
 }
+
+
+
+.logo {
+    margin: 6rem 0 0 30rem;
+}
+
+.title {
+    font-size: 8rem;
+    color: var(--light-green);
+    font-family: 'Sen', sans-serif;
+    margin: 5rem 0 0 20rem;
+    position: relative;
+
+    letter-spacing: .2rem;
+}
+
+.special {
+    z-index: 0;
+}
+
+main {
+    margin-left: 10rem;
+}
+
+p {
+    color: var(--gray);
+    font-size: 1.2rem;
+    font-family: 'Inter', sans-serif;
+}
+
+.info {
+    width: 400px;
+    margin: 1rem 0 0 20rem;
+    font-size: 1.3rem;
+}
+
+button {
+    background-color: var(--light-green);
+    color: var(--dark-green);
+    border: none;
+    font-size: 1.3rem;
+    font-family: 'Sen' sans-serif;
+    margin: 1.2rem 0 0 20rem;
+    padding: 1.2rem 1rem;
+    border-radius: 10px;
+    font-weight: 700;
+}
+
+.twitter {
+    display: flex;
+    align-items: center;
+    margin: 1rem 0 0 20rem;
+}
+
+.twitter p {
+    margin-left: 1rem;
+}
+
+.user1 {
+    position: relative;
+    left: 85rem;
+    bottom: 28rem;
+    z-index: 0;
+    width: 100px;
+}
+
+.user2 {
+    position: relative;
+    left: 75rem;
+    bottom: 43rem;
+}
+
+.user3 {
+    position: relative;
+    bottom: 42rem;
+    left: 6rem;
+    z-index: 0;
+}
+
+.user4 {
+    position: relative;
+    left: 45rem;
+    bottom: 10rem;
+    width: 200px;
+}
+
+.user5 {
+    position: relative;
+    bottom: 40rem;
+    left: 33rem;
+    z-index: 0;
+}
+
+
+.user6 {
+    position: relative;
+    bottom: 22rem;
+    left: 15rem;
+    z-index: 1;
+}
+
+span {
+    position: relative;
+    z-index: 2;
+}
+
